--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ body {
 	display: block;
 	width: 324px;
 	height: 100px;
-	background: #fff url(../images/logo.gif) no-repeat top left;
+	background: #fff url(images/logo.gif) no-repeat top left;
 }
 
 #header h1 a span {
