--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+  -webkit-text-size-adjust: 100%;
   font-family: Helvetica, Sans-Serif;
   background-color: rgb(240,240,240);
   margin: 0;
