--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,24 @@ h3 {
   background-image: url(images/newsletter.png);
 }
 
+#content .video-container {
+  position: relative;
+  padding-bottom: 65%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+#content .video-container iframe,  
+#content .video-container object,  
+#content .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #footer {
   padding: 0 1em;
   color: rgb(100,100,100);
