--- a/styles.css
+++ b/styles.css
@@ -104,21 +104,36 @@ h3 {
 
 #header-small .logo {
   float: left;
-  width: 60%;
+  width: 65%;
 }
 
-#header-small .logo .logo-wrapper {
+#header-small .logo div {
   padding: 1em;
 }
 
-#header-small .logo .logo-wrapper img {
+#header-small .logo div img {
   display: block;
-  width: 100%;
+  height: 4em;
+  border: 1px solid rgb(255,255,255);
 }
 
 #header-small .menu {
   float: left;
-  width: 40%;
+  width: 35%;
+}
+
+#header-small .menu a {
+  display: block;
+  float: right;
+  margin: 1.5em;
+  border: 1px solid rgb(220,220,220);
+  background-color: rgb(245,245,245);
+  border-radius: .25em;
+  padding: 1em;
+  color: rgb(100,100,100);
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 1em;
 }
 
 
