Almost there. More nav tweaks.

--- a/styles.css
+++ b/styles.css
@@ -124,11 +124,11 @@ h3 {
 #header-small .menu a {
   display: block;
   float: right;
-  margin: 1.5em;
+  margin: 1em;
   border: 1px solid rgb(220,220,220);
   background-color: rgb(245,245,245);
   border-radius: .25em;
-  padding: .5em;
+  padding: 1em;
   color: rgb(100,100,100);
   line-height: 1em;
 }
