--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* The Basics */
+
 body {
   -webkit-text-size-adjust: 100%;
   font-family: Helvetica, Sans-Serif;
@@ -47,7 +49,7 @@ h3 {
 }
 
 
-/* Basic Navigation */
+/* Navigation */
 
 
 .product-nav,
@@ -139,7 +141,6 @@ h3 {
 
 
 /* Content */
-
 
 
 #content {
@@ -243,6 +244,11 @@ ul#internal-nav.company-related a {
 
 
 #content .photo-wrapper {
+  
+}
+
+#content .photo-wrapper span {
+  display: block;
   border: 1px solid rgb(220,220,220);
   background-color: rgb(245,245,245);
   padding: 0.5em;
@@ -250,9 +256,19 @@ ul#internal-nav.company-related a {
   border-radius: .25em;
 }
 
-#content .photo-wrapper img {
+#content .photo-wrapper span img {
   display: block;
   width: 100%;
+}
+
+@media all and (min-width: 500px) {
+  #content .photo-wrapper {
+    width: 16em;
+    float: left;
+  }
+  #content .photo-wrapper span {
+    margin: 0 1em 1em 0;
+  }
 }
 
 
