--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,12 @@ p {
   margin: 0 0 1em 0;
 }
 
+ul {
+  font-size: 1em;
+  line-height: 1.375em;
+  margin: 0 0 1em 0;
+}
+
 h1 { 
   font-size: 1.5em;
   line-height: 1.5em;
@@ -77,11 +83,11 @@ h3 {
 }
 
 .product-nav ul {
-  border-top: 4px solid rgb(0,100,155);
+  border-top: .25em solid rgb(0,100,155);
 }
 
 .company-nav ul {
-  border-top: 4px solid rgb(50,155,50);
+  border-top: .25em solid rgb(50,155,50);
 }
 
 .company-nav a {
@@ -111,7 +117,6 @@ h3 {
 #header-small .logo a img {
   display: block;
   height: 3em;
-  border: 1px solid rgb(255,255,255);
 }
 
 #header-small .menu {
@@ -123,11 +128,10 @@ h3 {
   display: block;
   float: right;
   margin: 1em;
-  border: 1px solid rgb(220,220,220);
-  background-color: rgb(245,245,245);
+  background-color: rgb(155,155,155);
   border-radius: .25em;
   padding: 1em;
-  color: rgb(100,100,100);
+  color: rgb(255,255,255);
   line-height: 1em;
 }
 
@@ -188,6 +192,38 @@ h3 {
 
 #content #cta-download.call-to-action {
   background-image: url(images/file_extension_pdf.png);
+}
+
+
+/* Making Purchases */
+
+
+#content .make-purchase {
+  border: 1px solid rgb(100,185,235);
+  background-color: rgb(170,215,240);
+  background-repeat: no-repeat;
+  background-position: 1em 1em;
+  border-radius: .25em;
+  margin-bottom: 1em;
+  padding: 1em;
+}
+
+#content .make-purchase h3 {
+  margin: 0 0 1em 0;
+}
+
+#content .make-purchase p.add-to-cart {
+  margin: 0;
+}
+
+#content .make-purchase p.add-to-cart a {
+  display: block;
+  background-color: rgb(0,100,155);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgb(0,100,155)), color-stop(1, rgb(0,50,80)));
+  border-radius: .25em;
+  padding: 1em;
+  color: rgb(255,255,255);
+  text-align: center;
 }
 
 
@@ -263,7 +299,7 @@ ul#internal-nav.company-related a {
 
 @media all and (min-width: 500px) {
   #content .photo-wrapper {
-    width: 16em;
+    width: 17em;
     float: left;
   }
   #content .photo-wrapper span {
