--- a/styles.css
+++ b/styles.css
@@ -118,12 +118,12 @@ h3 {
 
 #header-small .logo a {
   display: block;
-  padding: 1em;
+  padding: 1.75em 1em;
 }
 
 #header-small .logo a img {
   display: block;
-  height: 3em;
+  height: 1.5em;
 }
 
 #header-small .menu {
@@ -187,6 +187,17 @@ h3 {
   width: 50%;
 }
 
+@media all and (min-width: 1280px) {
+  #header-large  {
+    text-align: center;
+  }
+  #header-large-wrapper {
+    text-align: left;
+    width:  1200px;
+    margin: 0 auto;
+  }
+}
+
 
 /* Content */
 
@@ -211,6 +222,17 @@ h3 {
   #content-area {
     float: left;
     width: 75%;
+  }
+}
+
+@media all and (min-width: 1280px) {
+  #content {
+    text-align: center;
+  }
+  #content-wrapper {
+    text-align: left;
+    width:  1200px;
+    margin: 0 auto;
   }
 }
 
@@ -414,5 +436,16 @@ h3 {
 @media all and (min-width: 960px) {
   #footer-nav {
     display: none;
+  }
+}
+
+@media all and (min-width: 1280px) {
+  #footer {
+    text-align: center;
+  }
+  #footer-wrapper {
+    text-align: left;
+    width:  1200px;
+    margin: 0 auto;
   }
 }
